--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">dont-panic-android</string>
+    <string name="app_name">Don\'t Panic</string>
+    <string name="view_all">View All Offices</string>
 </resources>
